--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "release": "standard-version",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "semantic-release": "^15.9.15"
+    "semantic-release": "^15.9.15",
+    "standard-version": "^4.4.0"
   }
 }
